--- a/src/app/All/footer/footer.component.css
+++ b/src/app/All/footer/footer.component.css
@@ -11,7 +11,7 @@
         bottom: 0;
         width: 100%;
         /* Set the fixed height of the footer here */
-        background-color: orange;
+        background-color: #212123;
       }
     
     .col-md-2 {
@@ -36,7 +36,7 @@
         bottom: 0;
         width: 100%;
         /* Set the fixed height of the footer here */
-        background-color: orange;
+        background-color: #212123;
       }
     
     .col-md-2 {
