Page Admin done

--- a/src/app/PageAdmin/admin-announce-list/admin-announce-list.component.html
+++ b/src/app/PageAdmin/admin-announce-list/admin-announce-list.component.html
@@ -1,126 +1,62 @@
-<table class="table">
-  <thead>
-    <tr>
-      <th>
-        #
-      </th>
-      <th>
-        Titre
-      </th>
-      <th>
-        Type Pièce
-      </th>
-      <th>
-        Vendeur
-      </th>
-      <th>
-        Editer
-      </th>
-      <th>
-        Supprimer
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>
-        1
-      </td>
-      <td>
-        TB - Monthly
-      </td>
-      <td>
-        01/04/2012
-      </td>
-      <td>
-        Default
-      </td>
-      <td>
-        <i class="material-icons">edit</i>
-      </td>
-      <td>
-        <i class="material-icons">delete_sweep</i>
-      </td>
-    </tr>
-    <tr class="table-active">
-      <td>
-        1
-      </td>
-      <td>
-        TB - Monthly
-      </td>
-      <td>
-        01/04/2012
-      </td>
-      <td>
-        Approved
-      </td>
-      <td>
-        <i class="material-icons">edit</i>
-      </td>
-      <td>
-        <i class="material-icons">delete_sweep</i>
-      </td>
-    </tr>
-    <tr class="table-success">
-      <td>
-        2
-      </td>
-      <td>
-        TB - Monthly
-      </td>
-      <td>
-        02/04/2012
-      </td>
-      <td>
-        Declined
-      </td>
-      <td>
-        <i class="material-icons">edit</i>
-      </td>
-      <td>
-        <i class="material-icons">delete_sweep</i>
-      </td>
-    </tr>
-    <tr class="table-warning">
-      <td>
-        3
-      </td>
-      <td>
-        TB - Monthly
-      </td>
-      <td>
-        03/04/2012
-      </td>
-      <td>
-        Pending
-      </td>
-      <td>
-        <i class="material-icons">edit</i>
-      </td>
-      <td>
-        <i class="material-icons">delete_sweep</i>
-      </td>
-    </tr>
-    <tr class="table-danger">
-      <td>
-        4
-      </td>
-      <td>
-        TB - Monthly
-      </td>
-      <td>
-        04/04/2012
-      </td>
-      <td>
-        Call in to confirm
-      </td>
-      <td>
-        <i class="material-icons">edit</i>
-      </td>
-      <td>
-        <i class="material-icons">delete_sweep</i>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<div class="col-md-8">
+    <cdk-virtual-scroll-viewport itemSize="100" class="VSviewport">
+      <table class="table table-hover table-striped list">
+        <thead class="head sticky">
+          <tr>
+            <th>
+              #
+            </th>
+            <th>
+              Titre
+            </th>
+            <th>
+              Pièce
+            </th>
+            <th>
+              Vendeur
+            </th>
+            <th>
+              Prix
+            </th>
+            <th>
+              Status
+            </th>
+            <th>
+              Editer
+            </th>
+            <th>
+              Supprimer
+            </th>
+          </tr>
+        </thead>
+        <ng-container *cdkVirtualFor="let n of numbers">
+          <tr>
+            <td>
+              {{ n }}
+            </td>
+            <td>
+              Axe moteur CB 500
+            </td>
+            <td>
+              Axe moteur
+            </td>
+            <td>
+              Lyon casse moto
+            </td>
+            <td>
+              90€
+            </td>
+            <td>
+              En vente
+            </td>
+            <td>
+              <i class="material-icons">edit</i>
+            </td>
+            <td>
+              <i class="material-icons">delete_sweep</i>
+            </td>
+          </tr>
+        </ng-container>
+      </table>
+    </cdk-virtual-scroll-viewport>
+</div>
