--- a/src/app/PageAdmin/admin-home/admin-home.component.html
+++ b/src/app/PageAdmin/admin-home/admin-home.component.html
@@ -1,32 +1,32 @@
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-md-4">
+		<div class="col-md-3 navContainer">
       <button mat-raised-button class="sideNavBtn" routerLink="./admin-buyer-list">
-        <mat-card-title>
+        <mat-card-title class="sideNavBtnTxt">
           Liste Acheteurs
         </mat-card-title>
       </button>
 
       <button mat-raised-button class="sideNavBtn" routerLink="./admin-company-list">
-          <mat-card-title>
+          <mat-card-title class="sideNavBtnTxt">
             Liste Entreprises
           </mat-card-title>
       </button>
 
       
       <button mat-raised-button class="sideNavBtn" routerLink="./admin-announce-list">
-          <mat-card-title>
+          <mat-card-title class="sideNavBtnTxt">
             Liste Annonces
           </mat-card-title>
       </button>
 
       <button mat-raised-button class="sideNavBtn" routerLink="./db_manager">
-          <mat-card-title>
+          <mat-card-title class="sideNavBtnTxt">
             Ajout modèle
           </mat-card-title>
       </button>
 		</div>
-		<div class="col-md-8">
+		<div class="col-md-9">
 			<router-outlet></router-outlet>
 		</div>
 	</div>
