--- a/src/app/PageAdmin/admin-home/admin-home.component.css
+++ b/src/app/PageAdmin/admin-home/admin-home.component.css
@@ -9,8 +9,8 @@
 /*DEFAULT CSS - MOBILE VERSION  DEFAULT CSS - MOBILE VERSION  DEFAULT CSS - MOBILE VERSION  DEFAULT CSS - MOBILE VERSION*/
 @media (max-width: 576px) {
     .sideNavBtn {
-        width: 60%;
-        height: 8vh;
+        width: 72%;
+        height: 9vh;
     }
 }
 
@@ -28,14 +28,26 @@
         width: 100%;
         height: 8vh;
     }
+
+    .sideNavBtnTxt {
+        font-size: 1.3em;
+    }
 }
 
 /*DESKTOP VERSION*/
 @media (min-width: 1200px) {
     .sideNavBtn {
         width: 60%;
-        height: 15vh;
+        height: 12vh;
         display: block;
         margin: 2vh auto;
+    }
+
+    .sideNavBtnTxt {
+        font-size: 1.8em;
+    }
+
+    .navContainer {
+        margin-top: 3vh; 
     }
 }
