--- a/src/app/All/navbar/navbar.component.html
+++ b/src/app/All/navbar/navbar.component.html
@@ -11,7 +11,7 @@
       >
     </a>
 
-    <form class="my-lg-0 col-8 col-sm-2">
+    <form class="my-lg-0 col-8 col-lg-2 col-sm-4">
       <input
         class="form-control-plaintext mr-sm-2 adoptPieceSearch"
         type="search"
@@ -33,9 +33,7 @@
     </button>
 
     <div
-      class="collapse navbar-collapse offset-6"
-      id="navbarSupportedContent"
-    >
+      class="collapse navbar-collapse offset-6" id="navbarSupportedContent">
       <ul class="navbar-nav row rightLinks">
         <li class="nav-item active col-6">
           <a
