--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="aViewHeight">
   <app-navbar></app-navbar>
-  
+  <app-home-background></app-home-background>
   <router-outlet></router-outlet>
   </div>
   <app-footer></app-footer>
