--- a/src/app/Seller/page-announce-pro/page-announce-pro.component.html
+++ b/src/app/Seller/page-announce-pro/page-announce-pro.component.html
@@ -1,3 +1,38 @@
-<p>
-  page-announce-pro works!
-</p>
+<div class="container">
+    <div class="row mt-5">
+        <div class="col-md-5">
+          <app-search-vhl></app-search-vhl>
+        </div>
+    
+        <div class="col-md-4">
+          <app-search-immat></app-search-immat>
+        </div>
+        <div class="col-md-3">
+            <div class="card">
+              <div class="card-header">
+                <p class="card-text">Votre moto</p>
+              </div>
+            </div>
+          </div>
+    </div>
+  <div class="row mt-5">
+  <div class="col-lg-12">
+    <ngb-tabset>
+        <ngb-tab title="Création annonce">
+          <ng-template ngbTabContent>
+            <app-tab-creation></app-tab-creation>
+          </ng-template>
+        </ngb-tab>
+        <ngb-tab title="Mes annonces">
+          <ng-template ngbTabContent>
+            <app-tab-announce></app-tab-announce>
+          </ng-template>
+        </ngb-tab>
+        <ngb-tab title="Historique">
+            <ng-template ngbTabContent>
+            </ng-template>
+        </ngb-tab>
+      </ngb-tabset>
+    </div>
+  </div>
+</div>
