--- a/src/app/Buyer/buyer-home/buyer-home.component.html
+++ b/src/app/Buyer/buyer-home/buyer-home.component.html
@@ -1,3 +1,5 @@
+<app-home-background></app-home-background>
+
 <div class="container marge-top">
 
   <div class="row">
@@ -23,6 +25,5 @@
       <app-search-bar></app-search-bar>
     </div>
   </div>
-
-  
 </div>
+<app-categories class="col-4 categories"></app-categories>
