--- a/src/app/Seller/page-announce-pro/tab-creation/tab-creation.component.css
+++ b/src/app/Seller/page-announce-pro/tab-creation/tab-creation.component.css
@@ -19,3 +19,36 @@ input, label {
 pre {
     font-size: 1rem;
 }
+
+.categories {
+    background-color: #1a1a1a;
+    text-align: end;
+    padding-top:3px;
+    color: #F0F0F0;
+    padding-right: 3.5ch;
+    border-radius: 2px;
+    cursor: pointer;
+    margin-top: 20px;
+    margin-left: 5px;
+}
+
+.categ {
+    display: none;
+}
+
+.arrowHead {
+    background-image: url('../../../../assets/down-arrow-white.png');
+    background-size: 15px;
+    background-position: center right 5px;
+    background-repeat: no-repeat;
+}
+.sidenav {
+    width:100%;
+    display: flex;
+}
+@media screen and (max-width: 768px) {
+    .sidenav {
+    width: 100%;
+    display: inline;
+    }
+}
