--- a/src/app/All/navbar/navbar.component.html
+++ b/src/app/All/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-light bg-warning row">
+  <nav class="navbar navbar-expand-lg navbar-light bg-warning fixed-top row">
     <a class="navbar-brand col-1" routerLink="/">
       <img class="websiteLogo" src="../../../assets/moto.png" alt="logo">
     </a>
 
-    <form class="my-lg-0 col-8 col-sm-2">
+    <form class="my-lg-0 col-8 col-lg-2 col-sm-5">
       <input class="form-control-plaintext mr-sm-2 adoptPieceSearch" type="search" placeholder="Adopter une pièce"
         aria-label="Search" />
     </form>
