--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
   </div>
-  <app-footer class="footer"></app-footer>
+  <app-footer></app-footer>
