Btn created buyer in admin-company-list added

--- a/src/app/All/navbar/navbar.component.html
+++ b/src/app/All/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-light bg-warning fixed-top row">
+  <nav class="navbar navbar-expand-lg navbar-light bg-warning row">
     <a class="navbar-brand col-1" routerLink="/">
       <img class="websiteLogo" src="../../../assets/moto.png" alt="logo">
     </a>
