--- a/src/app/PageAdmin/admin-company-list/admin-company-list.component.html
+++ b/src/app/PageAdmin/admin-company-list/admin-company-list.component.html
@@ -1,3 +1,8 @@
+<div class="row mt-4">
+    <div class="col-md-12 text-right">
+      <button mat-raised-button color="primary" class="crtSellerBtn">Créer Acheteur</button>
+    </div>    
+</div>
 <div class="col-md-8">
     <cdk-virtual-scroll-viewport itemSize="100" class="VSviewport">
       <table class="table table-hover table-striped list">
@@ -38,7 +43,7 @@
               123456789
             </td>
             <td>
-              17 rue Delandine
+              17 rue Delandine, 69002 Lyon
             </td>
             <td>
               0606060606
