Create company btn added in sided nav on admin-home, route done

--- a/src/app/PageAdmin/admin-home/admin-home.component.html
+++ b/src/app/PageAdmin/admin-home/admin-home.component.html
@@ -25,6 +25,12 @@
             Ajout modèle
           </mat-card-title>
       </button>
+
+      <button mat-raised-button class="sideNavBtn" routerLink="./admin-company-create">
+        <mat-card-title class="sideNavBtnTxt">
+          Ajout vendeur
+        </mat-card-title>
+    </button>
 		</div>
 		<div class="col-md-9">
 			<router-outlet></router-outlet>
