creation back annonce

--- a/src/app/Seller/page-announce-pro/tab-creation/tab-creation.component.html
+++ b/src/app/Seller/page-announce-pro/tab-creation/tab-creation.component.html
@@ -1,15 +1,31 @@
 <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
 
 <div class="container mt-3">
+  <form [announceForm]="createAnnonce" (ngSubmit)="onSubmit()">
+  <!-- Ajout d'un champ pour le titre de l'annonce -->
   <div class="input-group mt-3">  
-    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Entrez le titre de votre annonce ...">
+    <input
+      formControlName="title"
+      type="text" 
+      class="form-control"
+      id="title"
+      aria-label="Sizing example input" 
+      aria-describedby="inputGroup-sizing-default" 
+      placeholder="Entrez le titre de votre annonce ...">
   </div>
+  <!-- Ajout bouton pour importer les photos de l'annonce -->
   <div class="ajoutPhoto mt-3">
     <h5><label for="Photo">Choisir une photo :</label></h5>
-    <input type="file" id="Photo" name="photo" accept="image/png, image/jpeg">
+    <input 
+      formControlName="image"
+      type="file" 
+      id="image"
+      name="photo" 
+      accept="image/png, image/jpeg">
   </div>
   <div class="categorie mt-4">
     <h5>Préciser la catégorie :</h5>
+    <!-- dropdown pour choisir dans qu'elle catégorie va la pièce -->
     <div class="row">
     <div id="sidenav" class="sidenav mb-5 ml-3">
       <button *ngIf="phoneScreen==true" class="closebtn" (click)="closeNav()">&times;</button>
@@ -25,6 +41,7 @@
     <button *ngIf="phoneScreen==true" type="button" class="menuButton" (click)="openNav()"></button>
   <div>
     <h5>Description de votre pièce :</h5>
+    <!-- ajpout champ pour décrire l'état de la pièce -->
     <textarea class="form-control" rows="5" aria-label="With textarea"></textarea>
   </div>
   <div class="note mt-3">
@@ -37,4 +54,6 @@
         <button type="submit" class="btn btn-primary">Valider votre annonce</button>
     </div>
   </div> 
+</div>
+</form>
 </div>
