--- a/src/app/Sign-up/creation-compte/creation-compte.component.html
+++ b/src/app/Sign-up/creation-compte/creation-compte.component.html
@@ -15,7 +15,7 @@
           <div class="box_inner">
             <div class="form-group row">
               <label for="colFormLabel" class="label col-md-3 col-form-label"
-                >Email</label
+                >Email</label>
               >
               <div class="col-md-6">
                 <input
