--- a/src/app/Buyer/panier/panier.component.html
+++ b/src/app/Buyer/panier/panier.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="container">
   <h1 class="text-center mt-3">Votre panier</h1>
   <mat-horizontal-stepper labelPosition="bottom" #stepper class="mt-1">
