--- a/src/app/Sign-up/my-account/infosperso/infosperso.component.html
+++ b/src/app/Sign-up/my-account/infosperso/infosperso.component.html
@@ -41,7 +41,7 @@
                 >Téléphone Portable</label
               >
               <div class="col-md-6">
-                <input type="text" class="form-control" id="nom" />
+                <input type="text" class="form-control" id="telephone" />
               </div>
           </div>
           <div>
