Website logo in navbar

--- a/src/app/All/navbar/navbar.component.css
+++ b/src/app/All/navbar/navbar.component.css
@@ -22,7 +22,8 @@
 }
 
 .websiteLogo {
-    width:2em !important;
+    width: 2.5em !important;
+    height: 2.5em !important;
 }
 
 .adoptPieceSearch {
