--- a/src/app/All/navbar/navbar.component.html
+++ b/src/app/All/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <nav class="navbar navbar-expand-lg navbar-light bg-warning row">
     <a class="navbar-brand col-1" routerLink="/">
-      <img class="websiteLogo" src="../../../assets/moto.png" alt="logo">
+      <img class="websiteLogo" src="../../../assets/ADP_symbole_logo_noir.png" alt="logo">
     </a>
 
     <form class="my-lg-0 col-8 col-lg-2 col-sm-5">
