--- a/src/app/All/footer/footer.component.css
+++ b/src/app/All/footer/footer.component.css
@@ -1,61 +1,72 @@
+/*------------ NEW CSS ------------*/
 .row {
     margin-left: 0px;
     margin-right: 0px;
     height: 45vh;
 }
 
- @media screen and (max-width: 8000px)
+footer {
+    position: static;
+    bottom: 0;
+    width: 100%;
+    background-color: #212123;
+}
 
-{
-    footer {
-        position: static;
-        bottom: 0;
-        width: 100%;
-        /* Set the fixed height of the footer here */
-        background-color: #212123;
-      }
-    
-    .col-md-2 {
-        margin:1em auto;
-    }
-    
-    h6 {
-        margin:0;
-    }
+.footerLink a {
+    color: white;
+}
 
-    .footerLink a {
-        font-size: 0.8em;
-        color: white;
+.contactAdressText {
+    color: white;
+    text-align: left;
+    margin-left: 35%; 
+}
+
+/*DEFAULT CSS - MOBILE VERSION  DEFAULT CSS - MOBILE VERSION  DEFAULT CSS - MOBILE VERSION  DEFAULT CSS - MOBILE VERSION*/
+@media (max-width: 576px) {
+    .legalNotice {
+        margin-top: 3vh;
     }
 }
 
-@media screen and (max-width: 600px)
-
-{
-    footer {
-        position: static;
-        bottom: 0;
-        width: 100%;
-        /* Set the fixed height of the footer here */
-        background-color: #212123;
-      }
-    
-    .col-md-2 {
-        margin:1em auto;
-    }
-    
-    h6 {
-        margin:0;
+/*LANDSCAPE PHONE*/
+@media (min-width: 576px) {
+    .row {
+        height: 100vh;
     }
 
-    .footerLink a {
-        font-size: 0.7em;
-        color: white;
+    .linkContainer{
+        margin-top: 3vh;
+    }
+
+    .contactAdressText {
+        margin-left: 45%; 
+    }
+
+    .legalNotice {
+        margin-top: 5vh;
     }
 }
 
+/*TABLET VERSION*/
+@media (min-width: 768px) {
+    .row {
+        height: 50vh;
+    }
 
-.row {
-    margin: 0px 0px 0px 0px;
-    padding:0px 0px 0px 0px;
+    .linkContainer{
+        margin-top: 2.5vh;
+    }
+}
+
+/*DESKTOP VERSION*/
+@media (min-width: 1200px) {
+
+    .contactAdressText {
+        margin-left: 40%; 
+    }
+
+    .legalNotice {
+        margin-top: 4vh;
+    }
 }
