--- a/src/app/All/footer/footer.component.html
+++ b/src/app/All/footer/footer.component.html
@@ -7,42 +7,46 @@
     <div class="row text-center d-flex">
 
       <!-- Grid column -->
-      <div class="col-4 col-md-2">
-        <h6 class="text-uppercase font-weight-bold footerLink">
-          <a href="#!">CONTACT</a>
-        </h6>
-      </div>
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-4 col-md-2">
-        <h6 class="text-uppercase font-weight-bold footerLink">
-          <a href="#!">CGV</a>
-        </h6>
-      </div>
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-4 col-md-2">
-        <h6 class="text-uppercase font-weight-bold footerLink">
-          <a href="#!">PLAN DU SITE</a>
-        </h6>
-      </div>
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-6 col-md-2">
+      <div class="col-12 col-sm-12 col-lg-3 linkContainer">
         <h6 class="text-uppercase font-weight-bold footerLink">
           <a href="#!">QUI SOMMES NOUS ?</a>
         </h6>
       </div>
-      <!-- Grid column -->
+      <!-- Grid column END -->
 
       <!-- Grid column -->
-      <div class="col-6 col-md-2">
+      <div class="col-12 col-sm-12 col-lg-3 linkContainer">
         <h6 class="text-uppercase font-weight-bold footerLink">
-          <a href="#!">MENTIONS LEGALES</a>
+          <a href="#!">PLAN DU SITE</a>
         </h6>
       </div>
+      <!-- Grid column END-->
+
+      <!-- Grid column -->
+      <div class="col-12 col-sm-12 col-lg-3 linkContainer">
+        <h6 class="text-uppercase font-weight-bold footerLink">
+          <a href="#!">CONTACT</a>
+        </h6>
+        <div class="contactAdress">
+          <p class="contactAdressText">
+            Lorem Ipsum <br>
+            44 av du maine <br>
+            69000 Lyon
+          </p>
+            
+        </div>
+      </div>
+      <!-- Grid column END-->
+
+      <!-- Grid column -->
+      <div class="col-12 col-sm-12 col-lg-3 linkContainer">
+        <h6 class="text-uppercase font-weight-bold footerLink">
+          <a href="#!">CGV</a>
+        </h6>
+        <h6 class="text-uppercase font-weight-bold footerLink legalNotice">
+            <a href="#!">MENTIONS LEGALES</a>
+        </h6>
+      </div>
+      <!-- Grid column END-->
     </div>
 </footer>
