--- a/src/app/Buyer/categories/sous-categories/sous-categories.component.css
+++ b/src/app/Buyer/categories/sous-categories/sous-categories.component.css
@@ -1,8 +1,8 @@
 .list-group-item {
-    width:30ch;
+    width: 20vw;
     margin-top:5px;
-    margin-left:10px;
-    font-size:0.8em;
+    margin-left:5vw;
+    font-size:1.2em;
     cursor: pointer;
 }
 
