Reworking the full filtering system displaying in desktop

--- a/src/app/Buyer/categories/categories.component.css
+++ b/src/app/Buyer/categories/categories.component.css
@@ -1,3 +1,8 @@
+.categoriesContainer {
+    border: 1px solid red;
+    width: 30vw;
+}
+
 .categories {
     background-color: #1a1a1a;
     width: 18vw;
