--- a/src/app/Buyer/categories/categories.component.html
+++ b/src/app/Buyer/categories/categories.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container categoriesContainer">
   <div id="sidenav" class="sidenav">
     <button *ngIf="phoneScreen==true" class="closebtn" (click)="closeNav()">&times;</button>
   <div *ngFor="let categories of motoCategories.categories; let index=index">
