--- a/src/app/Buyer/categories/sous-categories/sous-sous-categories/sous-sous-categories.component.css
+++ b/src/app/Buyer/categories/sous-categories/sous-sous-categories/sous-sous-categories.component.css
@@ -1,4 +1,11 @@
-.badge {
-    margin-left:15px;
-    font-size: 0.7em;
+.bikePartContainer {
+    border: 1px solid green;
+}
+
+.partsBtn{
+    margin-top: 2vh;
+    margin-left: 5vw;
+    border: 1px solid black;
+    background-color: transparent;
+    font-size: 1.1em;
 }
