--- a/src/app/Buyer/buyer-home/buyer-home.component.html
+++ b/src/app/Buyer/buyer-home/buyer-home.component.html
@@ -24,5 +24,13 @@
       <app-search-bar></app-search-bar>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-5">
+      <app-categories></app-categories>
+    </div>
+    <div class="col-7">
+      <app-home-announce></app-home-announce>
+    </div>
+  </div>
 </div>
-<app-categories class="col-4 categories"></app-categories>
