--- a/src/app/Buyer/buyer-home/buyer-home.component.html
+++ b/src/app/Buyer/buyer-home/buyer-home.component.html
@@ -25,12 +25,8 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-5">
-      <app-categories></app-categories>
-    </div>
-    <div class="col-7">
-      <app-home-announce></app-home-announce>
-    </div>
+  <div class="filtersAndAnnouces">
+    <app-categories></app-categories>
+    <app-home-announce></app-home-announce>
   </div>
 </div>
