--- a/src/app/Sign-up/my-account/adresses/adresses.component.html
+++ b/src/app/Sign-up/my-account/adresses/adresses.component.html
@@ -8,51 +8,82 @@
   </div>
 
 
-<form>
+  <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
   <div class="account__box ">
       <div class="account__box__title mb-3"><h5>Votre nouvelle adresse</h5></div>
       <div class="box_inner">
-         
-
-        <div class="form-group row">
-            <label for="colFormLabel" class="label col-md-3 col-form-label"
-              >Nom de l'adresse</label
-            >
-            <div class="col-md-6">
-              <input type="text" class="form-control" id="adresse1" />
+          <div class="form-group row">
+              <label for="colFormLabel" class="label col-md-3 col-form-label"
+                >N° et Rue</label
+              >
+              <div class="col-md-6">
+                <input
+                  type="text"
+                  formControlName="adresse1"
+                  class="form-control"
+                  id="adresse1"
+                  [ngClass]="{ 'is-invalid': submitted && f.adresse1.errors }"
+                />
+                <div
+                  *ngIf="submitted && f.adresse1.errors"
+                  class="invalid-feedback"
+                >
+                  <div *ngIf="f.adresse1.errors.required">champs requis</div>
+                </div>
+              </div>
             </div>
-          </div>
-        <div class="form-group row">
-          <label for="colFormLabel" class="label col-md-3 col-form-label"
-            >N° et Rue</label
-          >
-          <div class="col-md-6">
-            <input type="text" class="form-control" id="adresse1" />
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="colFormLabel" class="label col-md-3 col-form-label"
-            >Comlément Adresse</label>
-          <div class="col-md-6">
-            <input type="text" class="form-control" id="adresse2" />
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="colFormLabel" class="label col-md-3 col-form-label"
-            >Code Postal</label
-          >
-          <div class="col-md-6">
-            <input type="text" class="form-control" id="codepostal" />
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="colFormLabel" class="label col-md-3 col-form-label"
-            >Ville</label
-          >
-          <div class="col-md-6">
-            <input type="text" class="form-control" id="ville" />
-          </div>
-        </div>
+            <div class="form-group row">
+              <label for="colFormLabel" class="label col-md-3 col-form-label"
+                >Comlément Adresse</label
+              >
+              <div class="col-md-6">
+                <input
+                  type="text"
+                  formControlName="adresse2"
+                  class="form-control"
+                />
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="colFormLabel" class="label col-md-3 col-form-label"
+                >Code Postal</label
+              >
+              <div class="col-md-6">
+                <input
+                  type="text"
+                  formControlName="codepostal"
+                  class="form-control"
+                  id="codepostal"
+                  [ngClass]="{ 'is-invalid': submitted && f.codepostal.errors }"
+                />
+                <div
+                  *ngIf="submitted && f.codepostal.errors"
+                  class="invalid-feedback"
+                >
+                  <div *ngIf="f.codepostal.errors.required">champs requis</div>
+                </div>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="colFormLabel" class="label col-md-3 col-form-label"
+                >Ville</label
+              >
+              <div class="col-md-6">
+                <input
+                  type="text"
+                  formControlName="ville"
+                  class="form-control"
+                  id="ville"
+                  [ngClass]="{ 'is-invalid': submitted && f.ville.errors }"
+                />
+                <div
+                  *ngIf="submitted && f.ville.errors"
+                  class="invalid-feedback"
+                >
+                  <div *ngIf="f.ville.errors.required">champs requis</div>
+                </div>
+              </div>
+            </div>
         <div>
             <button type="submit" class="btn btn-warning text-white mb-2">Valider</button>
         </div>
