--- a/src/app/Sign-up/my-account/motdepasse/motdepasse.component.html
+++ b/src/app/Sign-up/my-account/motdepasse/motdepasse.component.html
@@ -9,18 +9,61 @@
 
 <div class="row">
   <div class="col-12">
-    <form>
+      <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
       <div class="account__box ">
         <div class="box_inner">
+
           <div class="form-group row">
-            <label for="colFormLabel" class="label col-md-3 col-form-label"
-              >Mot de passse actuel</label
-            >
-            <div class="col-md-6">
-              <input type="password" class="form-control" id="email" />
+              <label for="colFormLabel" class="label col-md-3 col-form-label"
+                >Nouveau mot de passe</label
+              >
+              <div class="col-md-6">
+                <input
+                  formControlName="password"
+                  type="password"
+                  class="form-control"
+                  id="password"
+                  [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
+                />
+                <div
+                  *ngIf="submitted && f.password.errors"
+                  class="invalid-feedback"
+                >
+                  <div *ngIf="f.password.errors.required">champs requis</div>
+                  <div *ngIf="f.password.errors.minlength">
+                    Le mot de passe doit avoir au moins 8 caractères
+                  </div>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="form-group row">
+            <div class="form-group row">
+              <label for="colFormLabel" class="label col-md-3 col-form-label"
+                >Confirmation mot de passe</label
+              >
+              <div class="col-md-6">
+                <input
+                  type="password"
+                  formControlName="confirmPassword"
+                  class="form-control"
+                  id="confirmPassword"
+                  [ngClass]="{
+                    'is-invalid': submitted && f.confirmPassword.errors
+                  }"
+                />
+                <div
+                  *ngIf="submitted && f.confirmPassword.errors"
+                  class="invalid-feedback"
+                >
+                  <div *ngIf="f.confirmPassword.errors.required">
+                    champs requis
+                  </div>
+                  <div *ngIf="f.confirmPassword.hasError('NoPassswordMatch')">
+                    les mots de passe ne sont pas identiques
+                  </div>
+                </div>
+              </div>
+            </div>
+          <!-- <div class="form-group row">
               <label for="colFormLabel" class="label col-md-3 col-form-label"
                 >Nouveau mot de passe</label
               >
@@ -35,7 +78,7 @@
               <div class="col-md-6">
                 <input type="password" class="form-control" id="nom" />
               </div>
-          </div>
+          </div> -->
           <div>
               <button type="submit" class="btn btn-warning text-white  mb-2">Validez</button>
           </div>
