--- a/src/app/Buyer/categories/sous-categories/sous-sous-categories/sous-sous-categories.component.html
+++ b/src/app/Buyer/categories/sous-categories/sous-sous-categories/sous-sous-categories.component.html
@@ -1,5 +1,5 @@
 <div class="bikePartContainer">
-  <div *ngFor="let sousSousCategories of sousCategories.sousSousCategories" class="test">
+  <div *ngFor="let sousSousCategories of sousCategories.sousSousCategories">
     <button mat-raised-button class="partsBtn" routerLink="">{{sousSousCategories.name}}</button>
   </div>
 </div>
