--- a/src/app/All/navbar/navbar.component.css
+++ b/src/app/All/navbar/navbar.component.css
@@ -37,6 +37,7 @@
     border-radius:20px;
     border:1px solid #FFC419;
     padding-left:12px;
+    min-width:20ch;
 }
 .adoptPieceSearch::placeholder {
     color:black;
