--- a/src/app/All/navbar/navbar.component.html
+++ b/src/app/All/navbar/navbar.component.html
@@ -117,7 +117,7 @@
             </div>
 
             <div class="form-group">
-              <button type="submit"  class="btn btn-warning btn-connex"  (click)="login()">Se
+              <button type="submit"  data-dismiss="dismiss" class="btn btn-warning btn-connex">Se
                 connecter </button>
             </div>
           </form>
